--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\RolfMoikj\u00e6r\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/Users/AlexanderSteen/Library/Application Support/NetBeans/8.0.2/build.properties
