Added build settings

--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,10 @@
 <project name="CA-ChatServer-Server" default="default" basedir=".">
     <description>Builds, tests, and runs the project CA-ChatServer-Server.</description>
     <import file="nbproject/build-impl.xml"/>
+     <target name="-post-compile">
+      <copy file="server.properties" todir="${dist.dir}"/> 
+      <copy file="startServer.bat" todir="${dist.dir}"/>
+    </target>
     <!--
 
     There exist several targets which are by default empty and which can be 
